[tool.poetry]
name = "dialtor"
version = "0.1.0"
description = "Advanced Tor network control CLI - Manage circuits, relays, bridges, and onion services"
authors = ["dialtor contributors <dialtor@example.com>"]
maintainers = ["dialtor contributors <dialtor@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/jacoinnz/dialtor"
repository = "https://github.com/jacoinnz/dialtor"
documentation = "https://github.com/jacoinnz/dialtor/blob/main/README.md"
keywords = [
    "tor",
    "privacy",
    "anonymity",
    "cli",
    "network",
    "circuit",
    "relay",
    "bridge",
    "onion",
    "security",
    "stem",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
include = [
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "docs/API.md",
    "docs/man/*.1",
]
exclude = [
    "tests",
    "*.pyc",
    "__pycache__",
    ".pytest_cache",
]

[tool.poetry.dependencies]
python = "^3.10"
stem = "^1.8.2"
typer = {extras = ["all"], version = "^0.12.0"}
rich = "^13.7.0"
pydantic = "^2.6.0"
tomli = "^2.0.1"
python-dotenv = "^1.0.0"

[tool.poetry.extras]
ip-check = ["requests"]

[tool.poetry.group.ip-check]
optional = true

[tool.poetry.group.ip-check.dependencies]
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
dialtor = "dialtor.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (default)",
    "integration: Integration tests requiring Tor",
]
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "stem.*"
ignore_missing_imports = true
